# ox

./: LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/commit/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  publish.yml
src/ox/: __init__.py  cli.py  entry.py  experiments.py  tracker.py
src/ox/templates/: CLAUDE.md  ox.yaml
src/ox/templates/skills/: analyze-results.md  create-experiment.md  debug-run.md  git-workflow.md  plan-study.md  query-experiments.md  run-local.md
tests/: conftest.py  test_cli.py  test_entry.py  test_experiments.py  test_tracker.py
